XMLExper/m12/m12_366_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘virtual char* tinyxml2::XMLNode::ParseDeep(char*, tinyxml2::StrPair*, int*)’:
tinyxml2.cpp:1156:156: error: cannot dynamic_cast ‘decl’ (of type ‘const class tinyxml2::XMLDeclaration* const’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1156 |                 _document->SetError( XML_ERROR_PARSING_DECLARATION, initialLineNum, "XMLDeclaration value=%s", /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(decl)->Value());
      |                                                                                                                                                            ^
diff: tinyxml2.o: No such file or directory
